--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@tailwindcss/ui": "^0.1.3",
         "axios": "^0.19",
         "cross-env": "^7.0",
+        "eslint": "^7.9.0",
+        "eslint-plugin-vue": "^7.0.0-beta.4",
         "laravel-jetstream": "^0.0.3",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
