--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ php:
   - '7.4'
 
 before_script:
+  - cp .env.travis .env
+  - mysql -e 'create database laravel;'
   - composer self-update
   - composer install --no-interaction
-  - cp .env.travis .env
 
 script:
   - php artisan test --coverage-text
