--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "eslint": "^7.9.0",
+        "eslint-plugin-vue": "^7.0.0-beta.4"
+    },
+    "dependencies": {
+        "vue-highlightjs": "^1.3.3",
         "@inertiajs/inertia": "^0.1.7",
         "@inertiajs/inertia-vue": "^0.1.2",
-        "@tailwindcss/ui": "^0.1.3",
+        "@tailwindcss/ui": "^0.1.4",
         "axios": "^0.19",
         "cross-env": "^7.0",
-        "eslint": "^7.9.0",
-        "eslint-plugin-vue": "^7.0.0-beta.4",
-        "laravel-jetstream": "^0.0.3",
+        "laravel-jetstream": "^1.0.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "portal-vue": "^2.1.7",
