--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,10 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.2.12",
         "laravel/framework": "^8.0",
-        "laravel/jetstream": "^1.3",
+        "laravel/jetstream": "^1.5.1",
         "laravel/sanctum": "^2.6",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
