--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
         "eslint-plugin-vue": "^7.0.0-beta.4"
     },
     "dependencies": {
-        "vue-highlightjs": "^1.3.3",
+        "@fortawesome/fontawesome-svg-core": "^1.2.32",
+        "@fortawesome/free-brands-svg-icons": "^5.15.1",
+        "@fortawesome/free-solid-svg-icons": "^5.15.1",
+        "@fortawesome/vue-fontawesome": "^2.0.0",
         "@inertiajs/inertia": "^0.1.7",
         "@inertiajs/inertia-vue": "^0.1.2",
         "@tailwindcss/ui": "^0.1.4",
@@ -30,6 +33,7 @@
         "sass-loader": "^8.0.0",
         "tailwindcss": "^1.3.0",
         "vue": "^2.5.17",
+        "vue-highlightjs": "^1.3.3",
         "vue-template-compiler": "^2.6.10"
     }
 }
